// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendsExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    浮层在右边
  </button>
</DocumentFragment>
`;

exports[`PlacementExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    Left
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Top
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    Bottom
  </button>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 1`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(255, 62, 0);"
      >
        <svg
          class="t-icon t-icon-info-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 2`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(255, 170, 0);"
      >
        <svg
          class="t-icon t-icon-info-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 3`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(0, 82, 217);"
      >
        <svg
          class="t-icon t-icon-info-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 4`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 5`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(255, 62, 0);"
      >
        <svg
          class="t-icon t-icon-info-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 6`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(255, 62, 0);"
      >
        <span>
          CustomIcon
        </span>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 7`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 8`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <i
        style="color: rgb(0, 82, 217);"
      >
        <svg
          class="t-icon t-icon-info-circle-filled"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </i>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 9`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <span>
        CustomIcon
      </span>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
        style="color: rgb(34, 34, 34);"
      />
      <button
        class="t-button t-button--theme-default t-button--variant-text t-size-s"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThemeExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    默认
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    提示
  </button>
  <button
    class="t-button t-button--theme-warning t-button--variant-base"
  >
    警告
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    错误
  </button>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    提交
  </button>
</DocumentFragment>
`;

exports[`describe.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    操作
  </button>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    使用VNode
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    使用Function
  </button>
</DocumentFragment>
`;
